Closed
Bug 406312
Opened 18 years ago
Closed 18 years ago
SVG textPath startOffset cannot be animated any more by version 3 beta 1
Categories
(Core :: SVG, defect, P2)
Tracking
()
VERIFIED
FIXED
People
(Reporter: dagan, Assigned: longsonr)
References
Details
(Keywords: regression, testcase)
Attachments
(2 files, 1 obsolete file)
2.26 KB,
image/svg+xml
|
Details | |
16.59 KB,
patch
|
tor
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-GB; rv:1.8.1.11) Gecko/20071127 Firefox/2.0.0.11
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-GB; rv:1.8.1.11) Gecko/20071127 Firefox/2.0.0.11
Using SVG scripting, version 2 animates startOffset of textPath. Version 3 beta 1 does not.
Reproducible: Always
Steps to Reproduce:
1.Animate by scripting startOffset of textPath.
2.Run with version 2 of Firefox, it works.
3.Run with version 3 beta 1, it does not.
Actual Results:
The textPath remains motionless with version 3 beta 1. Applying alert(); one can see that the values of strartOffset are changing as expected, but this is not seen on the screen. No errors are issued.
Expected Results:
See above.
One can try the attached file with Firefox version 2, and with Firefox version 3 beta1, and see the difference.
Assignee | ||
Updated•18 years ago
|
Component: Extension Compatibility → SVG
Product: Firefox → Core
QA Contact: extension.compatibility → general
![]() |
||
Updated•18 years ago
|
Keywords: regression,
testcase
Assignee | ||
Comment 3•18 years ago
|
||
Assignee: nobody → longsonr
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Attachment #291081 -
Flags: review?(tor)
Assignee | ||
Comment 4•18 years ago
|
||
Attachment #291081 -
Attachment is obsolete: true
Attachment #291097 -
Flags: review?(tor)
Attachment #291081 -
Flags: review?(tor)
Assignee | ||
Comment 5•18 years ago
|
||
This also fixes bug 319345
Assignee | ||
Updated•18 years ago
|
Assignee: nobody → longsonr
Attachment #291097 -
Flags: review?(tor) → review+
Assignee | ||
Updated•18 years ago
|
Attachment #291097 -
Flags: superreview?(roc)
Assignee | ||
Updated•18 years ago
|
Flags: blocking1.9?
Attachment #291097 -
Flags: superreview?(roc) → superreview+
Assignee | ||
Comment 6•18 years ago
|
||
checked in.
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Comment 8•17 years ago
|
||
verified fixed using Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9pre) Gecko/2008050614 Minefield/3.0pre and the testcase
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•