Bug 406312 - textPath startOffset does not react to DOM changes. r=tor,sr=roc,a1.9=tor