layout/svg/base/src/nsSVGTextPathFrame.cpp
@@ -44,6 +44,7 @@
 #include "nsContentUtils.h"
 #include "nsIDOMSVGAnimatedPathData.h"
 #include "nsSVGPathElement.h"
+#include "nsSVGTextPathElement.h"
 
 
 NS_IMPL_ISUPPORTS1(nsSVGPathListener, nsIMutationObserver)
@@ -103,40 +104,6 @@ nsSVGTextPathFrame::Init(nsIContent*      aContent,
 {
   nsSVGTextPathFrameBase::Init(aContent, aParent, aPrevInFlow);
 
-  nsCOMPtr<nsIDOMSVGTextPathElement> tpath = do_QueryInterface(mContent);
-
-  {
-    nsCOMPtr<nsIDOMSVGAnimatedLength> length;
-    tpath->GetStartOffset(getter_AddRefs(length));
-
-    // XXX: Gross hack as stand-in until length lists converted
-#ifdef DEBUG_tor
-    fprintf(stderr,
-            "### Using nsSVGTextPathFrame mStartOffset hack - fix me\n");
-#endif
-    nsCOMPtr<nsIDOMSVGLength> offset;
-    length->GetAnimVal(getter_AddRefs(offset));
-    PRUint16 type;
-    float value;
-    offset->GetUnitType(&type);
-    offset->GetValueInSpecifiedUnits(&value);
-    nsCOMPtr<nsISVGLength> l;
-    NS_NewSVGLength(getter_AddRefs(l), value, type);
-    mStartOffset = l;
-
-    NS_ASSERTION(mStartOffset, "no startOffset");
-    if (!mStartOffset)
-      return NS_ERROR_FAILURE;
-
-    NS_NewSVGLengthList(getter_AddRefs(mX),
-                        static_cast<nsSVGElement*>(mContent),
-                        nsSVGUtils::X);
-    if (mX) {
-      nsCOMPtr<nsIDOMSVGLength> length;
-      mX->AppendItem(mStartOffset, getter_AddRefs(length));
-    }
-  }
-
   {
     nsCOMPtr<nsIDOMSVGURIReference> aRef = do_QueryInterface(mContent);
     if (aRef)
@@ -158,9 +125,7 @@ nsSVGTextPathFrame::GetType() const
 NS_IMETHODIMP_(already_AddRefed<nsIDOMSVGLengthList>)
 nsSVGTextPathFrame::GetX()
 {
-  nsIDOMSVGLengthList *retval = mX;
-  NS_IF_ADDREF(retval);
-  return retval;
+  return nsnull;
 }
 
 NS_IMETHODIMP_(already_AddRefed<nsIDOMSVGLengthList>)
@@ -208,9 +173,13 @@ already_AddRefed<gfxFlattenedPath>
 nsSVGTextPathFrame::GetFlattenedPath()
 {
   nsIFrame *path = GetPathFrame();
-  if (!path)
-    return nsnull;
-
+  return path ? GetFlattenedPath(path) : nsnull;
+}
+ 
+already_AddRefed<gfxFlattenedPath>
+nsSVGTextPathFrame::GetFlattenedPath(nsIFrame *path)
+{
+  NS_PRECONDITION(path, "Unexpected null path");
   nsSVGPathGeometryElement *element = static_cast<nsSVGPathGeometryElement*>
                                                  (path->GetContent());
 
@@ -221,6 +190,42 @@ nsSVGTextPathFrame::GetFlattenedPath()
   nsCOMPtr<nsIDOMSVGMatrix> localTM = element->GetLocalTransformMatrix();
 
   return element->GetFlattenedPath(localTM);
+}
+
+gfxFloat
+nsSVGTextPathFrame::GetStartOffset()
+{
+  nsSVGTextPathElement *tp = static_cast<nsSVGTextPathElement*>(mContent);
+  nsSVGLength2 *length = &tp->mLengthAttributes[nsSVGTextPathElement::STARTOFFSET];
+  float val = length->GetAnimValInSpecifiedUnits();
+
+  if (val == 0.0f)
+    return 0.0;
+
+  if (length->GetSpecifiedUnitType() ==
+      nsIDOMSVGLength::SVG_LENGTHTYPE_PERCENTAGE) {
+    nsRefPtr<gfxFlattenedPath> data = GetFlattenedPath();
+    return data ? (val * data->GetLength() / 100.0) : 0.0;
+  } else {
+    return val * GetPathScale();
+  }
+}
+
+gfxFloat
+nsSVGTextPathFrame::GetPathScale() 
+{
+  nsIFrame *pathFrame = GetPathFrame();
+  if (!pathFrame)
+    return 1.0;
+
+  nsSVGPathElement *path = static_cast<nsSVGPathElement*>(pathFrame->GetContent());
+  float pl = path->mPathLength.GetAnimValue();
+
+  if (pl == 0.0f)
+    return 1.0;
+
+  nsRefPtr<gfxFlattenedPath> data = GetFlattenedPath(pathFrame);
+  return data ? data->GetLength() / pl : 1.0; 
 }
 
 //----------------------------------------------------------------------
