layout/svg/base/src/nsSVGTextPathFrame.h
@@ -99,6 +99,8 @@ public:
   already_AddRefed<gfxFlattenedPath> GetFlattenedPath();
   nsIFrame *GetPathFrame();
 
+  gfxFloat GetStartOffset();
+  gfxFloat GetPathScale();
 protected:
 
   NS_IMETHOD_(already_AddRefed<nsIDOMSVGLengthList>) GetX();
@@ -107,12 +109,10 @@ protected:
   NS_IMETHOD_(already_AddRefed<nsIDOMSVGLengthList>) GetDy();
 
 private:
+  already_AddRefed<gfxFlattenedPath> GetFlattenedPath(nsIFrame *path);
 
-  nsCOMPtr<nsIDOMSVGLength> mStartOffset;
   nsCOMPtr<nsIDOMSVGAnimatedString> mHref;
   nsRefPtr<nsSVGPathListener> mPathListener;
-
-  nsCOMPtr<nsIDOMSVGLengthList> mX;
 
   friend class nsSVGPathListener;
 };
